kitten/reported_bugs/rust/rust-85768/stderr.txt
error[E0658]: mutable references are not allowed in constant functions

  --> mutant.rs:14:18

   |

14 | pub const fn g ( x : & mut [ u32 ; 8 ] ) {

   |                  ^

   |

   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information

   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable



error[E0625]: thread-local statics cannot be accessed at compile-time

  --> mutant.rs:15:32

   |

15 | std :: mem :: swap ( x , & mut STATIC_VAR_2 )

   |                                ^^^^^^^^^^^^



thread 'rustc' panicked at 'tls access is checked in `Rvalue::ThreadLocalRef', compiler/rustc_mir/src/transform/check_consts/validation.rs:359:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (9111b8ae9 2021-05-26) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [mir_const_qualif] const checking `g`

#1 [mir_promoted] processing `g`

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0658`.

